--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>HeadBallZ</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,26 +38,26 @@
           </a>
         </div>
         <div class="menu">
-          <a
+         <!--- <a
             href="https://discord.gg/A9CnsVzzkZ"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/discord.webp" alt="Discord" />
-          </a>
+          </a> --->
           <a
-            href="https://twitter.com/codeSTACKr"
+            href="https://twitter.com/"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
-          <a
-            href="https://opensea.io/collection/codecats"
+          <!--- <a
+            href="https://opensea.io/collection/headballznft"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/opensea.webp" alt="Opensea" />
+            <img src="images/header/opensea.webp" alt="Opensea" /> --->
           </a>
           <button class="wallet-btn btn" id="connectWallet">
             <span>Connect Wallet</span>
@@ -69,9 +69,9 @@
     <section class="container not-connected">
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
-        <h1 id="welcomeH1">Welcome to the CodeCats NFT Project!</h1>
+        <h1 id="welcomeH1">Welcome to the HeadBallZ NFT Project</h1>
         <p id="welcomeP">
-          The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
+          The HeadBallZ NFT Project are just little BallZ of fun with attitude and sass on the Polygon Blockchain</a> 
         </p>
       </div>
     </section>
@@ -104,15 +104,15 @@
         </div>
         <h1 id="mainHeading">NFT Drop Coming Soon!!</h1>
         <p id="mainText">
-          A new batch of cute cats will be available very soon!
+          A new batch of crazy BallZ of fun will be available very soon
         </p>
-        <a
+        <!-- <a
           id="actionButton"
           href="https://discord.gg/A9CnsVzzkZ"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
+          ><span>Join the Catmmunity</span> -->
         </a>
         <div id="mintContainer" class="mint-container hidden">
           <div class="info-container">
@@ -122,11 +122,11 @@
             </div>
             <div>
               <h3>Price Per Mint</h3>
-              <p id="pricePerMint">1 ETH</p>
+              <p id="pricePerMint">6 MATIC</p>
             </div>
             <div>
               <h3>Max</h3>
-              <p id="maxPerMint">5 per wallet</p>
+              <p id="maxPerMint">10 per wallet</p>
             </div>
           </div>
           <div class="mint-qty">
@@ -152,8 +152,8 @@
         </div>
       </div>
       <div class="minted-container card show-card hidden">
-        <h1>🎉</h1>
-        <h2>Minted!</h2>
+        <h1>SUCCESS</h1>
+        <h2>Minted</h2>
         <p>Here's your trasaction link:</p>
         <a id="mintedTxnBtn" href="" target="_blank" rel="noopener noreferrer">
           <button class="hero-btn btn">View Transaction</button>
